// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Title basic render snapshoot 1`] = `
.c0 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 22px;
  text-align: left;
  font-weight: normal;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title centered render snapshoot 1`] = `
.c0 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 22px;
  text-align: center;
  font-weight: normal;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title isBold and centered render snapshoot 1`] = `
.c0 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 22px;
  text-align: center;
  font-weight: bold;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title isBold render snapshoot 1`] = `
.c0 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 22px;
  text-align: left;
  font-weight: bold;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title isBold, isSmall and centered render snapshoot 1`] = `
.c0 {
  margin-bottom: 0;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 16px;
  text-align: center;
  font-weight: bold;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title isSmall and centered render snapshoot 1`] = `
.c0 {
  margin-bottom: 0;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 16px;
  text-align: center;
  font-weight: normal;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title isSmall and isBold render snapshoot 1`] = `
.c0 {
  margin-bottom: 0;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 16px;
  text-align: left;
  font-weight: bold;
}

<p
  className="c0"
>
  text
</p>
`;

exports[`Title Title isSmall render snapshoot 1`] = `
.c0 {
  margin-bottom: 0;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #3f51b5;
  font-size: 16px;
  text-align: left;
  font-weight: normal;
}

<p
  className="c0"
>
  text
</p>
`;
